# Linux-rpc-monitor

display_monitor/: CMakeLists.txt  monitor_widget.cpp
rpc_manager/server/: rpc_manager.cpp
test_monitor/include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h
test_monitor/include/utils/: read_file.h
test_monitor/src/: CMakeLists.txt
test_monitor/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  mem_monitor.cpp
test_monitor/src/utils/: read_file.cpp
